# tuto_typescript

./: Analyze.py  package-lock.json  package.json  report_toto.txt  scommit.b.sh
42_auth/: .gitignore
42_auth/py42/: 42server.py  pyproject.toml  run.sh
42_auth/py42/templates/: done.html  index.html
PixieTest/: build.sh  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
PixieTest/src/: index.js  index.ts
formtype/: form.js  form.ts  index.html  run.sh  tsconfig.json
hello/: app.js  app.ts  package-lock.json  package.json  tsconfig.json
mock_nest_mythril/myth/: run.sh  tsconfig.json
mocknestjs_bulle/: package-lock.json  package.json
mocknestjs_bulle/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
myth/: package-lock.json  package.json
myth/src/: index.js  index.ts
mythmulti/: runserver.sh
mythmulti/src/: index.js  index.ts
mythpix/: package-lock.json  package.json
mythpix/src/: index.js  index.ts
nesttest/: package-lock.json  package.json
nestwebsocket/: build.sh  mockserv.gateway.js  mockserv.gateway.ts  mockserv.module.js  mockserv.module.ts  package-lock.json  package.json  run.sh
nestwebsocket/backend/: nohup.out  package-lock.json  package.json
nestwebsocket/front/: build.sh  bundle.js  front.js  front.ts  (+1 more)
orm/: package-lock.json  package.json
ormbulle/: package-lock.json  package.json
pingserverclient/: .eslintrc.js  client.js  client.ts  index.html  log.txt  package-lock.json  package.json  tsconfig.json  webpack.config.ts  websocket.js  websocket.ts
testiobu/: package-lock.json
(+52 files in other folders)
