[tool.poetry]
name = "py42"
version = "0.1.0"
description = ""
authors = ["bussiere <bussiere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
